--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,10 +11,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: npm ci && npm run build
+      
+      # 1. Flutter Ortamının Kurulması
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          
+      # 2. Bağımlılıkların Yüklenmesi
+      - run: flutter pub get
+      
+      # 3. Web Sürümünün Derlenmesi
+      - run: flutter build web
+      
+      # 4. Firebase Hosting'e Gönderim
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_RETURN99STUDIOSVERIFY }}
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_RETURN99STUDIOSVERIFY }}'
           channelId: live
           projectId: return99studiosverify
